--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -1,5 +1,8 @@
 <h1>Facebook testing app!</h1>
 <p>Welcome to the homepage!</p>
 
+
+<p> <%= @msg if @msg %></p><br>
 <p><a href="/signup">Sign Up</a>!</p>
 <p><a href="/login">Login</a/>!</p>
+
