--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,4 +1,5 @@
 <h2>Login</h2>
+<p> <%= @msg if @msg %> </p>
 <form method=post action =/login>
 	<input type=text placeholder="Email" name="user_email"><br>
 	<input type=password placeholder="Password" name="user_password"><br>
